--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,7 @@
                 android:layout_height="40dp"
                 android:background="@drawable/layout_background"
                 android:hint="@string/search"
+                android:paddingLeft="12dp"
                 android:textSize="20sp" />
 
             <LinearLayout
