--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.presentation.ui.InfoActivity">
+    tools:context=".info.presentation.ui.InfoActivity">
 
     <ImageButton
         android:layout_width="24dp"
