--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -60,6 +60,8 @@
                         android:id="@+id/btn_combo"
                         android:layout_width="70dp"
                         android:layout_height="match_parent"
+                        android:onClick="@{() -> inputs.onComboClick()}"
+                        background= "@{searchFilterEntity.combo}"
                         android:background="@drawable/custom_button_true"
                         android:lineSpacingExtra="2dp"
                         android:text="@string/combo"
@@ -70,6 +72,8 @@
 
                     <Button
                         android:id="@+id/btn_demo"
+                        android:onClick="@{() -> inputs.onDemoClick()}"
+                        background= "@{searchFilterEntity.demo}"
                         android:layout_width="70dp"
                         android:layout_height="match_parent"
                         android:background="@drawable/custom_button_true"
@@ -82,6 +86,8 @@
 
                     <Button
                         android:id="@+id/btn_ac"
+                        android:onClick="@{() -> inputs.onACClick()}"
+                        background= "@{searchFilterEntity.ac}"
                         android:layout_width="70dp"
                         android:layout_height="match_parent"
                         android:background="@drawable/custom_button_true"
