--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.ECarChargeInfo" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:windowActionBarOverlay">true</item>
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -15,6 +16,7 @@
     </style>
 
     <style name="Theme.ECarChargeInfo.Splash" parent="Theme.SplashScreen">
+        <item name="android:windowActionBarOverlay">true</item>
         <item name="windowSplashScreenBackground">@color/purple_500</item>
         <item name="windowSplashScreenAnimatedIcon">@drawable/volt</item>
         <item name="postSplashScreenTheme">@style/Theme.ECarChargeInfo</item>
