--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
+<layout
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<androidx.constraintlayout.widget.ConstraintLayout
+
+    <data>
+        <variable
+            name="chargeInfo"
+            type="com.example.ecarchargeinfo.retrofit.model.charger.ChargerInfo" />
+        <variable
+            name="vm"
+            type="com.example.ecarchargeinfo.info.presentation.viewmodel.InfoViewModel" />
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".info.presentation.ui.InfoActivity">
@@ -20,13 +32,13 @@
         />
 
     <TextView
+        android:text="@{chargeInfo.csNm}"
         android:id="@+id/tv_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="18dp"
         android:ellipsize="end"
-        android:lines="1"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -37,6 +49,7 @@
         tools:text="@string/info_title" />
 
     <TextView
+        android:text="@{chargeInfo.addr}"
         android:id="@+id/tv_address"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -49,6 +62,7 @@
         tools:text="@string/info_address" />
 
     <TextView
+        android:cpStatText="@{chargeInfo.cpStat}"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
@@ -57,7 +71,7 @@
         app:layout_constraintStart_toStartOf="@+id/tv_address"
         app:layout_constraintTop_toBottomOf="@+id/tv_address"
         tools:text="@string/info_available"
-        android:text="충전가능"/>
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
