--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
+    <color name="can_charge">#00E2FF</color>
+    <color name="cannot_charge">#FF5050</color>
     <color name="button_true">#33CC33</color>
     <color name="button_false">#999999</color>
+    <color name="gray">#808080</color>
 </resources>
